correcting code with <br>

--- a/positioning.html
+++ b/positioning.html
@@ -21,8 +21,8 @@
     </p>
 
   <div class="box-set">
-    <figure class="box_middle">&lt;div&gt; position: relative</figure>
-    <figure class="box_absolute">&lt;div&gt; position: absolute</figure>
+    <figure class="box_middle">&lt;div&gt; <br>position: relative</figure>
+    <figure class="box_absolute">&lt;div&gt; <br>position: absolute</figure>
     <figure class="box_fixed">&lt;div&gt; position: fixed</figure>
   </div>
         <p>
